# rsyncer

./: Cargo.toml  Makefile
src/: config.toml  main.rs
src/clients/: config.rs  file.rs  google.rs  mod.rs  types.rs
