[package]
name = "GoogleSynchronizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-drive3 = "5.0.3"
hex = "0.4.3"
sha2 = "0.10.8"
serde_json = "1.0.108"
failure = "0.1.8"
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.8"
thiserror = "1.0.50"
serde = { version = "1.0.192", features = ["derive"] }
async-trait = "0.1.74"
